--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
           <div>
             <h1 class="colourTest">A Dating App For Corporates</h1>
             <h2 class="colourTest">Let's find one love for you in other coporates with corpodates.</h2>
-            <a href="#" class="download-btn" style="background-color:brown; border:1px solid white;"><i class="bx bxl-play-store"></i> Google Play</a>
-            <a href="#" class="download-btn" style="background-color:brown; border:1px solid white;"><i class="bx bxl-apple"></i> App Store</a>
+            <a href="#" class="download-btn" style="background-color:brown; border:1px solid white;">Register</a>
+            <a href="#" class="download-btn" style="background-color:brown; border:1px solid white; text-align: center !important;">Login</a>
           </div>
         </div>
         <div class="col-lg-6 d-lg-flex flex-lg-column align-items-stretch order-1 order-lg-2 hero-img" data-aos="fade-up">
