--- a/login.html
+++ b/login.html
@@ -38,7 +38,7 @@
 
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact" >
-      <div class="container" data-aos="fade-up" style="border:1px solid white; border-radius: 10px;">
+      <div class="container" data-aos="fade-up">
         <br><br><br>
         <div class="section-title">
           <h2 style="color: white;">Login - Corpodates</h2>
