--- a/index.html
+++ b/index.html
@@ -26,13 +26,6 @@
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
-
-  <!-- =======================================================
-  * Template Name: Appland - v4.8.0
-  * Template URL: https://bootstrapmade.com/free-bootstrap-app-landing-page-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body>
@@ -67,7 +60,7 @@
             <h1 class="colourTest">A Dating App For Corporates</h1>
             <h2 class="colourTest">Let's find one love for you in other coporates with corpodates.</h2>
             <a href="#" class="download-btn" style="background-color:brown; border:1px solid white;">Register</a>
-            <a href="#" class="download-btn" style="background-color:brown; border:1px solid white; text-align: center !important;">Login</a>
+            <a href="login.html" class="download-btn" style="background-color:brown; border:1px solid white; text-align: center !important;">Login</a>
           </div>
         </div>
         <div class="col-lg-6 d-lg-flex flex-lg-column align-items-stretch order-1 order-lg-2 hero-img" data-aos="fade-up">
