--- a/login.html
+++ b/login.html
@@ -72,8 +72,8 @@
               <div class="text-center"><button type="submit" style="width:240px">Let's Login</button>
                 <br><br>
 
-                <div style="border:2px solid white; border-radius: 7px; height:40px;">
-                <p style="color:white; margin-top:3.5px;">Don't have account ? <a href="#" style="color:white; margin-top:3.5px;">Create an Account</a></p> 
+                <div style="border:1px solid white; border-radius: 7px; height:40px;">
+                <p style="color:white; margin-top:4.5px; font-size:16px">Don't have account ? <a href="#" style="color:white; margin-top:3.5px;">Create an Account</a></p> 
 
                 </div>
               </div>
