--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
         <div class="container d-flex align-items-center justify-content-between">
 
             <div class="logo">
-                <h1><a href="index.html"><b style="color: #5F2224;">Corpodates</b></a></h1>
+                <h1><a href="index.html"><b style="color: #5F2224;">Corpodates</b></a>
+                    <p style="font-size: 10px; margin-top: 8px; color: #5F2224;">In Corporate? Join Corpodates.</p></h1>
                 <!-- Uncomment below if you prefer to use an image logo -->
                 <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
             </div>
@@ -59,8 +60,9 @@
             <div class="row">
                 <div class="col-lg-6 d-lg-flex flex-lg-column justify-content-center align-items-stretch pt-5 pt-lg-0 order-2 order-lg-1" data-aos="fade-up">
                     <div>
-                        <h1 class="colourTest">A Dating App For Corporates</h1>
-                        <h2 class="colourTest">Let's find one love for you in other coporates with corpodates.</h2>
+                        <h1 class="MainHeadline"><br>A Dating App Specially Designed for Indian Corporates Only</h1>
+                        <br><h5 class="tagLine">Let's find your potential partner even in your busy schedule without disturbing it.</h5>
+                       <br>
                         <a href="#" class="download-btn" style="background-color:#5F2224; border:1px solid white;">Register</a>
                         <a href="login.html" class="download-btn" style="background-color:#5F2224; border:1px solid white; text-align: center !important;">Login</a>
                     </div>
