--- a/login.html
+++ b/login.html
@@ -14,7 +14,9 @@
     <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
     <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
+        rel="stylesheet">
 
     <!-- Vendor CSS Files -->
     <link href="assets/vendor/aos/aos.css" rel="stylesheet">
@@ -30,49 +32,61 @@
 </head>
 
 <body style="background-color:#5F2224;">
-
     <main id="main">
-
-
         <!-- ======= Contact Section ======= -->
         <section id="contact" class="contact">
             <div class="container" data-aos="fade-up">
                 <br><br>
-
                 <div class="row">
                     <div class="col-md-3"></div>
 
                     <div class="col-md-6">
                         <div class="section-title">
-                            <h2 style="color: white;">Login - Corpodates</h2>
-                            <hr style="color: white;">
-
-                            <p style="color: white;">Let's make a one step closer to your love ones in corporates with corpodates.</p>
-                            <hr style="color: white;">
+                            <h2 style="color: #F8F3F0;">Login - Corpodates</h2>
+                            <hr style="color: #F8F3F0;">
+                            <p style="color: #F8F3F0;">Let's get one step closer to your corporate date. </p>
+                            <hr style="color: #F8F3F0;">
 
                         </div>
-                        <form action="forms/contact.php" method="post" role="form" class="php-email-form" data-aos="fade-up">
+                        <form action="forms/contact.php" method="post" role="form" class="php-email-form"
+                            data-aos="fade-up">
                             <div class="form-group mt-3">
-                                <input placeholder="Your Email" type="email" class="form-control" name="email" id="email" required>
+                                <input placeholder="Your Email" type="email" class="form-control" name="email"
+                                    id="email" required style="border-radius: 7px;">
                             </div>
                             <div class="form-group mt-3">
-                                <input placeholder="Your Password" type="password" class="form-control" name="password" id="password" required>
+                                <input placeholder="Your Password" type="password" class="form-control" name="password"
+                                    id="password" required style="border-radius: 7px;">
                             </div>
                             <div class="form-group mt-3">
-                                <p style="color:white; font-size: 12px;">By signing in, you are agreeing the <b>Terms</b> and <b>Privacy Policy</b> of Corpodates</p>
+                                <p style="color:#F8F3F0; font-size: 12px;">By signing in, you are agreeing the
+                                    <b>Terms</b> and <b>Privacy Policy</b> of Corpodates</p>
                             </div>
                             <div class="my-3">
                                 <div class="loading">Loading</div>
                                 <div class="error-message"></div>
                                 <div class="sent-message">Your message has been sent. Thank you!</div>
                             </div>
-                            <div class="text-center"><button type="submit" style="width:240px">Let's Login</button>
+                            <div class="text-center">
+                                <button type="submit" style="width:160px; font-size:14px;">Let's Login</button>
                                 <br><br>
 
-                                <div style="border:1px solid white; border-radius: 7px; height:40px;">
-                                    <p style="color:white; margin-top:4.5px; font-size:16px">Don't have account ? <a href="#" style="color:white; margin-top:3.5px;">Create an Account</a></p>
-
+                                <div class="row">
+                                    <div class="col-md-2"></div>
+                                    <div class="col-md-8">
+                                        <div class="text-center createAccount">
+                                            <p style="color:#F8F3F0; margin-top:7px; font-size:14px">Don't have an
+                                                account ? <a href="#" style="color:#F8F3F0; margin-top:3.5px;">Create an
+                                                    Account</a></p>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-2"></div>
                                 </div>
+
+
+
+
+
                             </div>
 
 
