--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
             <div class="row">
                 <div class="col-lg-6 d-lg-flex flex-lg-column justify-content-center align-items-stretch pt-5 pt-lg-0 order-2 order-lg-1" data-aos="fade-up">
                     <div>
-                        <h1 class="MainHeadline"><br>A Dating App Specially Designed for Indian Corporates Only</h1>
-                        <br><h5 class="tagLine">Let's find your potential partner even in your busy schedule without disturbing it.</h5>
-                       <br>
+                        <h1 class="MainHeadline">A Dating App Specially Designed for Indian Corporates Only</h1>
+                        <h5 class="tagLine">Let's find your potential partner even in your busy schedule without disturbing it.</h5>
+                       
                         <a href="#" class="download-btn" style="background-color:#5F2224; border:1px solid white;">Register</a>
                         <a href="login.html" class="download-btn" style="background-color:#5F2224; border:1px solid white; text-align: center !important;">Login</a>
                     </div>
