--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
                         <h1 class="MainHeadline">A Dating App Specially Designed for Indian Corporates Only</h1>
                         <h5 class="tagLine">Let's find your potential partner even in your busy schedule without disturbing it.</h5>
                        <br>
-                        <a href="#" class="download-btn" style="background-color:#5F2224; border:1px solid white;">Register</a>
-                        <a href="login.html" class="download-btn" style="background-color:#5F2224; border:1px solid white; text-align: center !important;">Login</a>
+                        <a href="#" class="download-btn" style="background-color:#5F2224; border:1px solid #F8F3F0;">Register</a>
+                        <a href="login.html" class="download-btn" style="background-color:#5F2224; border:1px solid #F8F3F0; text-align: center !important;">Login</a>
                     </div>
                 </div>
                 <div class="col-lg-6 d-lg-flex flex-lg-column align-items-stretch order-1 order-lg-2 hero-img" data-aos="fade-up">
