--- a/Register.html
+++ b/Register.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Login - Corpodates</title>
+    <title>Register - Corpodates</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
 
@@ -42,7 +42,7 @@
 
                     <div class="col-md-6">
                         <div class="section-title">
-                            <h2 style="color: #F8F3F0;">Login - Corpodates</h2>
+                            <h2 style="color: #F8F3F0;">Create Account - Corpodates</h2>
                             <hr style="color: #F8F3F0;">
                             <p style="color: #F8F3F0;">Let's get one step closer to your corporate date. </p>
                             <hr style="color: #F8F3F0;">
@@ -59,7 +59,7 @@
                                     id="password" required style="border-radius: 7px;">
                             </div>
                             <div class="form-group mt-3">
-                                <p style="color:#F8F3F0; font-size: 12px;">By signing in, you are agreeing the
+                                <p style="color:#F8F3F0; font-size: 12px;">By creating account with us, you are agreeing the
                                     <b>Terms</b> and <b>Privacy Policy</b> of Corpodates</p>
                             </div>
                             <div class="my-3">
@@ -68,28 +68,20 @@
                                 <div class="sent-message">Your message has been sent. Thank you!</div>
                             </div>
                             <div class="text-center">
-                                <button type="submit" style="width:160px; font-size:14px;">Let's Login</button>
+                                <button type="submit" style="width:160px; font-size:14px;">Let's Create</button>
                                 <br><br>
 
                                 <div class="row">
                                     <div class="col-md-2"></div>
                                     <div class="col-md-8">
                                         <div class="text-center createAccount">
-                                            <p style="color:#F8F3F0; margin-top:7px; font-size:14px">Don't have an account ? <a href="Register.html" style="color:#F8F3F0; margin-top:3.5px;">Create an Account</a></p>
+                                            <p style="color:#F8F3F0; margin-top:7px; font-size:14px">Already have an account ? <a href="/login.html" style="color:#F8F3F0; margin-top:3.5px;">Login Now</a></p>
                                         </div>
                                     </div>
                                     <div class="col-md-2"></div>
                                 </div>
-
-
-
-
-
-                            </div>
-
-
+                           </div>
                             <br><br>
-
                         </form>
                     </div>
 
