--- a/basic-info.html
+++ b/basic-info.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Gender - Corpodates</title>
+    <title>Basic Info - Corpodates</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
 
@@ -36,12 +36,12 @@
         <!-- ======= Contact Section ======= -->
         <section id="contact" class="contact">
             <div class="container" data-aos="fade-up">
-                <br>
+        
                 <div class="row">
                     <div class="col-md-3"></div>
                     <div class="col-md-6">
                         <div class="section-title">
-                            <h2 style="color: #F8F3F0;">We need few information about you to proceed ahead.</h2>
+                            <h4 style="color: #F8F3F0;">We need few information about you to proceed ahead.</h4>
                             <hr style="color: #F8F3F0;">
                           
                         </div>
