--- a/basic-info.html
+++ b/basic-info.html
@@ -51,11 +51,15 @@
                         <form action="forms/contact.php" method="post" role="form" class="php-email-form"
                             data-aos="fade-up">
                             <div class="form-group mt-3">
-                                <input placeholder="Your Full Name" type="text" class="form-control" name="email"
+                            <h5 style="color: #F8F3F0;">Your Full Name</h5>
+
+                                <input placeholder="" type="text" class="form-control" name="email"
                                     id="email" required style="border-radius: 7px;">
                             </div>
                             <div class="form-group mt-3">
-                                <input placeholder="Your Age" type="number" class="form-control" name="age" id="email"
+                            <h5 style="color: #F8F3F0;">Your Age</h5>
+
+                                <input placeholder="" type="number" class="form-control" name="age" id="email"
                                     required style="border-radius: 7px;">
                             </div>
                             <br>
@@ -64,14 +68,20 @@
                             <div class="form-group mt-3">
                                 <p style="color: #F8F3F0;"><input type="radio" name="gender" id=""> Male</p>
                                 <p style="color: #F8F3F0;"> <input type="radio" name="gender" id=""> Female</p>
+                                <p style="color: #F8F3F0;"> <input type="radio" name="gender" id=""> Others</p>
+
                             </div>
                             <br>
                             <h5 style="color: #F8F3F0;">Interested In Gender ?</h5>
                             <div class="form-group mt-3">
                                 <p style="color: #F8F3F0;"><input type="radio" name="Intgender" id=""> Male</p>
                                 <p style="color: #F8F3F0;"> <input type="radio" name="Intgender" id=""> Female</p>
+                                <p style="color: #F8F3F0;"> <input type="radio" name="Intgender" id=""> Others</p>
+
                             </div>
                             <div class="form-group mt-3">
+                            <h5 style="color: #F8F3F0;">Your Company Name (Mention City Also)</h5>
+
                                 <input placeholder="Your Company Name (Mention City Also)" type="text"
                                     class="form-control" name="email" id="email" required style="border-radius: 7px;">
                             </div>
