--- a/basic-info.html
+++ b/basic-info.html
@@ -38,13 +38,12 @@
             <div class="container" data-aos="fade-up">
                 <br>
                 <br>
-                <br>
                 
                 <div class="row">
                     <div class="col-md-3"></div>
                     <div class="col-md-6">
                         <div class="section-title">
-                            <h2 style="color: #F8F3F0;">We need few information about you to proceed ahead. </h2>
+                            <h2 style="color: #F8F3F0;">We need few information about you to proceed ahead.</h2>
                             <hr style="color: #F8F3F0;">
 
                         </div>
@@ -82,7 +81,7 @@
                             <div class="form-group mt-3">
                             <h5 style="color: #F8F3F0;">Your Company Name (Mention City Also)</h5>
 
-                                <input placeholder="Your Company Name (Mention City Also)" type="text"
+                                <input placeholder="" type="text"
                                     class="form-control" name="email" id="email" required style="border-radius: 7px;">
                             </div>
 
