--- a/Register.html
+++ b/Register.html
@@ -75,7 +75,7 @@
                                     <div class="col-md-2"></div>
                                     <div class="col-md-8">
                                         <div class="text-center createAccount">
-                                            <p style="color:#F8F3F0; margin-top:7px; font-size:14px">Already have an account ? <a href="https://wakeupcoders.github.io/corpodates/login.html" style="color:#F8F3F0; margin-top:3.5px;">Login Now</a></p>
+                                            <p style="color:#F8F3F0; margin-top:7px; font-size:14px">Already have an account ? <a href="/login.html" style="color:#F8F3F0; margin-top:3.5px;">Login Now</a></p>
                                         </div>
                                     </div>
                                     <div class="col-md-2"></div>
