--- a/basic-info.html
+++ b/basic-info.html
@@ -27,70 +27,57 @@
     <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
     <!-- Template Main CSS File -->
-    <link href="assets/css/style.css" rel="stylesheet">
+    <link href="./assets/css/style.css" rel="stylesheet">
 
 </head>
 
-<body style="background-color:#5F2224;">
+<body class="changeBackgroundColor">
     <main id="main">
-        <!-- ======= Contact Section ======= -->
+        <!-- ======= basic info Section ======= -->
         <section id="contact" class="contact">
             <div class="container" data-aos="fade-up">
                 <br>
                 <br>
-                
                 <div class="row">
                     <div class="col-md-3"></div>
                     <div class="col-md-6">
                         <div class="section-title">
-                            <h2 style="color: #F8F3F0;">We need few information about you to proceed ahead.</h2>
-                            <hr style="color: #F8F3F0;">
-
+                            <h2 class="bzeColorFont">We need few information about you to proceed ahead.</h2>
+                            <hr class="bzeColorFont">
                         </div>
                         <form action="forms/contact.php" method="post" role="form" class="php-email-form"
                             data-aos="fade-up">
                             <div class="form-group mt-3">
-                            <h5 style="color: #F8F3F0;">Your Full Name</h5>
-
-                                <input placeholder="" type="text" class="form-control" name="email"
-                                    id="email" required style="border-radius: 7px;">
+                                <h5 class="bzeColorFont">Your Full Name</h5>
+                                <input placeholder="" type="text" class="form-control formInputFields" name="name" id="name" required>
                             </div>
                             <div class="form-group mt-3">
-                            <h5 style="color: #F8F3F0;">Your Age</h5>
-
-                                <input placeholder="" type="number" class="form-control" name="age" id="email"
-                                    required style="border-radius: 7px;">
+                                <h5 class="bzeColorFont">Your Age</h5>
+                                <input placeholder="" type="number" class="form-control formInputFields" name="age" id="age" required>
                             </div>
                             <br>
-
-                            <h5 style="color: #F8F3F0;">What is your Gender ?</h5>
+                            <h5 class="bzeColorFont">What is your Gender ?</h5>
                             <div class="form-group mt-3">
-                                <p style="color: #F8F3F0;"><input type="radio" name="gender" id=""> Male</p>
-                                <p style="color: #F8F3F0;"> <input type="radio" name="gender" id=""> Female</p>
-                                <p style="color: #F8F3F0;"> <input type="radio" name="gender" id=""> Others</p>
-
+                                <p class="bzeColorFont"><input type="radio" name="gender" id=""> Male</p>
+                                <p class="bzeColorFont"> <input type="radio" name="gender" id=""> Female</p>
+                                <p class="bzeColorFont"> <input type="radio" name="gender" id=""> Others</p>
                             </div>
                             <br>
-                            <h5 style="color: #F8F3F0;">Interested In Gender ?</h5>
+                            <h5 class="bzeColorFont">Interested In Gender ?</h5>
                             <div class="form-group mt-3">
-                                <p style="color: #F8F3F0;"><input type="radio" name="Intgender" id=""> Male</p>
-                                <p style="color: #F8F3F0;"> <input type="radio" name="Intgender" id=""> Female</p>
-                                <p style="color: #F8F3F0;"> <input type="radio" name="Intgender" id=""> Others</p>
-
+                                <p class="bzeColorFont"><input type="radio" name="Intgender" id=""> Male</p>
+                                <p class="bzeColorFont"> <input type="radio" name="Intgender" id=""> Female</p>
+                                <p class="bzeColorFont"> <input type="radio" name="Intgender" id=""> Others</p>
                             </div>
                             <div class="form-group mt-3">
-                            <h5 style="color: #F8F3F0;">Your Company Name (Mention City Also)</h5>
-
-                                <input placeholder="" type="text"
-                                    class="form-control" name="email" id="email" required style="border-radius: 7px;">
-                            </div>
-
-                            <div class="form-group mt-3">
-                                <textarea placeholder="Write something about yourself" type="text" class="form-control"
-                                    name="email" id="email" required style="border-radius: 7px;"></textarea>
+                                <h5 class="bzeColorFont">Your Company Name (Mention City Also)</h5>
+                                <input placeholder="" type="text" class="form-control formInputFields" name="company" id="company" required>
                             </div>
                             <div class="form-group mt-3">
-                                <p style="color:#F8F3F0; font-size: 12px;">Facing any issue? Let's contact support.</p>
+                                <textarea placeholder="Write something about yourself" type="text" class="form-control formInputFields" name="about" id="about" required></textarea>
+                            </div>
+                            <div class="form-group mt-3">
+                                <p class="contactSupport">Facing any issue? let's contact support.</p>
                             </div>
                             <div class="my-3">
                                 <div class="loading">Loading</div>
@@ -99,27 +86,19 @@
                             </div>
                             <br>
                             <div class="text-center">
-                                <button type="submit" style="width:190px; font-size:14px;">I'm Good, Go Next</button>
-
+                                <button type="submit" class="goNextButton">I'm Good, Go Next</button>
                                 <br><br>
-
                             </div>
                             <br><br>
                         </form>
                     </div>
-
                     <div class="col-md-3"></div>
-
                 </div>
-
             </div>
         </section>
-        <!-- End Contact Section -->
-
+        <!-- End basic info Section -->
     </main>
     <!-- End #main -->
-
-
     <!-- Vendor JS Files -->
     <script src="assets/vendor/aos/aos.js"></script>
     <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
@@ -127,7 +106,7 @@
     <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
     <script src="assets/vendor/php-email-form/validate.js"></script>
 
-    <!-- Template Main JS File -->
+    <!-- Main JS File -->
     <script src="assets/js/main.js"></script>
 
 </body>
